# modorganizer2-plugin_sanitycheck-senjay

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h  main_en.ts
src/ui/: dialog.ui
